Second Screen functionality is completed with all scenario.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:tabSelectedTextColor="#ffffff"
-                app:tabTextColor="#000000"
+                app:tabTextColor="#70ffffff"
+                app:tabTextAppearance="@style/tabTextAppeareance"
+                app:tabIndicatorColor="#ffffff"
                 android:background="?attr/colorPrimary" />
         </com.google.android.material.appbar.AppBarLayout>
 
