--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:bind="http://schemas.android.com/tools">
 
     <data>
 
@@ -38,9 +38,9 @@
                 app:toolbarId="@+id/toolbar">
 
                 <ImageView
-                    imageUrl="@{viewModel.movieInfo != null ? viewModel.movieInfo.backPath : (viewModel.moviesData != null ? viewModel.moviesData.backdropPath : ` `)}"
+                    imageUrl="@{viewModel.movieInfo != null ? viewModel.movieInfo.backPath : ` `}"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
+                    android:layout_height="280dp"
                     android:scaleType="fitXY"
                     app:layout_collapseMode="parallax"
                     app:layout_collapseParallaxMultiplier="0.7"
@@ -51,12 +51,24 @@
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
-                    app:popupTheme="@style/AppTheme.PopupOverlay" />
+                    app:popupTheme="@style/AppTheme.PopupOverlay">
+
+                    <TextView
+                        android:text="@{viewModel.headerTitle}"
+                        android:textSize="18sp"
+                        android:textColor="#ffffff"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </androidx.appcompat.widget.Toolbar>
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
 
-        <include layout="@layout/content_second" />
+        <include
+            android:id="@+id/contentSecond"
+            layout="@layout/content_second"
+            bind:viewModel="@{viewModel}" />
 
 
         <FrameLayout
@@ -73,8 +85,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:includeFontPadding="false"
-                android:textColor="@color/progresscolor"
                 android:text="@{progress}"
+                android:textColor="@color/progresscolor"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 tools:text="12%" />
@@ -87,20 +99,11 @@
                 android:background="@drawable/progress_shape"
                 android:indeterminate="false"
                 android:max="100"
-                android:progress="@{viewModel.movieInfo != null ? viewModel.movieInfo.totalVote : (viewModel.moviesData != null ? viewModel.moviesData.totalPercent : 0)}"
+                android:progress="@{viewModel.movieInfo != null ? viewModel.movieInfo.totalVote :  0}"
                 android:progressDrawable="@drawable/progress_drawable" />
 
         </FrameLayout>
 
-<!--
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
-            app:layout_anchor="@id/app_bar"
-            app:layout_anchorGravity="bottom|end"
-            app:srcCompat="@android:drawable/ic_dialog_email" />-->
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
