--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="inline_action_icon">#F44336</color>
     <color name="white">#ffffff</color>
     <color name="progresscolor">#007DD6</color>
+    <color name="black">#404040</color>
+
 </resources>
