--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,17 +29,18 @@
                 android:minHeight="?actionBarSize"
                 android:padding="@dimen/appbar_padding"
                 android:text="@string/app_name"
-                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
+                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
+                app:layout_scrollFlags="scroll|enterAlways" />
 
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:tabSelectedTextColor="#ffffff"
-                app:tabTextColor="#70ffffff"
-                app:tabTextAppearance="@style/tabTextAppeareance"
+                android:background="?attr/colorPrimary"
                 app:tabIndicatorColor="#ffffff"
-                android:background="?attr/colorPrimary" />
+                app:tabSelectedTextColor="#ffffff"
+                app:tabTextAppearance="@style/tabTextAppeareance"
+                app:tabTextColor="#70ffffff" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.viewpager.widget.ViewPager
